--- a/resources/style.css
+++ b/resources/style.css
@@ -1,11 +1,11 @@
 body{
     background-color: #e3deee;
     padding-top: 65px;
-    text-align: center;
+    /*text-align: center;*/
 }
 
 article{
-    text-align: center;
+    /*text-align: center;*/
 }
 
 img{
