--- a/resources/style.css
+++ b/resources/style.css
@@ -288,8 +288,8 @@ img{
     margin-left: 0 auto;
     margin-right: 0 auto;
     display: flex;
-    min-height: 100%;
-    min-width: 100%;
+    height: 100%;
+    width: 100%;
     justify-content: center;
     /*object-fit: contain;*/
 }
