--- a/resources/style.css
+++ b/resources/style.css
@@ -227,7 +227,7 @@
 
 }
 
- css below applies to all 
+ /*css below applies to all */
 
  * {
   -webkit-box-sizing: border-box;
@@ -288,23 +288,23 @@ img{
     margin-left: 0 auto;
     margin-right: 0 auto;
     display: flex;
-    height: auto;
-    width: 100%;
+    /*height: auto;*/
+    /*width: 100% auto;*/
     justify-content: center;
     /*object-fit: contain;*/
 }
 
 .img-fluid{
     display: flex;
-    min-height: 100%;
-    min-width: 100%;
+    /*min-height: 100%;*/
+    /*min-width: 100%;*/
 }
 
 .headline-img{
     display:table;
     table-layout: fixed;
-    height: 80px;
-    width: 150px;
+    /*height: 80px;*/
+    /*width: 150px;*/
     margin-left: 0 auto;
     margin-right: 10 auto;
     display: flex;
@@ -339,4 +339,22 @@ footer{
 .title{
     font-size: x-large;
     font-weight:bold;
+}
+
+.grid-container{
+    display: grid;
+    height: 100px;
+    grid-gap: 15px;
+    grid-auto-rows: minmax(200px, auto);
+    grid-template-columns: repeat(5, 1fr);    
+    grid-template-areas:
+        'section-2 main main main main';
+}
+
+main { 
+    grid-area: main;
+}
+
+.section-2{
+    grid-area: section-2;
 }
